--- a/index.html
+++ b/index.html
@@ -259,8 +259,8 @@
             <div class="owl-carousel big-gallery image-popup-gallery" data-owl-items="3" data-owl-auto-width="1" data-owl-nav="1" data-owl-dots="0" data-owl-center="1" data-owl-loop="0" data-owl-nav-container="#big-gallery-nav">
                 <div class="slide">
                     <div class="container">
-                        <a href="./assets/img/house/aura1.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura1-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura1.webp" class="image" title="Perspectiva - Schmid Aura">
+                            <img src="./assets/img/house/aura1-1140x641.webp" alt="Perspectiva - Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -268,8 +268,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="./assets/img/house/aura2.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura2-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura2.webp" class="image" title="Perspectiva - Schmid Aura">
+                            <img src="./assets/img/house/aura2-1140x641.webp" alt="Perspectiva - Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -277,8 +277,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="./assets/img/house/aura3.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura3-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura3.webp" class="image" title="Perspectiva - Schmid Aura">
+                            <img src="./assets/img/house/aura3-1140x641.webp" alt="Perspectiva - Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -286,8 +286,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="./assets/img/house/aura4.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura4-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura4.webp" class="image" title="Perspectiva - Schmid Aura">
+                            <img src="./assets/img/house/aura4-1140x641.webp" alt="Perspectiva - Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -295,8 +295,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="./assets/img/house/aura5.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura5-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura5.webp" class="image" title="Perspectiva - Schmid Aura">
+                            <img src="./assets/img/house/aura5-1140x641.webp" alt="Perspectiva - Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -304,8 +304,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="./assets/img/house/aura6.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura6-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura6.webp" class="image" title="Perspectiva - Schmid Aura">
+                            <img src="./assets/img/house/aura6-1140x641.webp" alt="Perspectiva - Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -313,8 +313,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="./assets/img/house/aura7.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura7-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura7.webp" class="image" title="Perspectiva - Schmid Aura">
+                            <img src="./assets/img/house/aura7-1140x641.webp" alt="Perspectiva - Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -322,8 +322,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="./assets/img/house/aura8.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura8-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura8.webp" class="image" title="Perspectiva - Schmid Aura">
+                            <img src="./assets/img/house/aura8-1140x641.webp" alt="Perspectiva - Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -331,8 +331,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="./assets/img/house/aura9.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura9-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura9.webp" class="image" title="Perspectiva - Schmid Aura">
+                            <img src="./assets/img/house/aura9-1140x641.webp" alt="Perspectiva - Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -340,8 +340,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="./assets/img/house/aura10.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura10-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura10.webp" class="image" title="Perspectiva - Schmid Aura">
+                            <img src="./assets/img/house/aura10-1140x641.webp" alt="Perspectiva - Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -349,8 +349,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="./assets/img/house/aura11.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura11-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura11.webp" class="image" title="Perspectiva - Schmid Aura">
+                            <img src="./assets/img/house/aura11-1140x641.webp" alt="Perspectiva - Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -358,8 +358,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="./assets/img/house/aura12.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura12-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura12.webp" class="image" title="Perspectiva - Schmid Aura">
+                            <img src="./assets/img/house/aura12-1140x641.webp" alt="Perspectiva - Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -367,8 +367,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="./assets/img/house/aura13.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura13-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura13.webp" class="image" title="Perspectiva - Schmid Aura">
+                            <img src="./assets/img/house/aura13-1140x641.webp" alt="Perspectiva - Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -376,8 +376,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="./assets/img/house/aura14.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura14-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura14.webp" class="image" title="Perspectiva - Schmid Aura">
+                            <img src="./assets/img/house/aura14-1140x641.webp" alt="Perspectiva - Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -385,8 +385,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="./assets/img/house/aura15.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura15-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura15.webp" class="image" title="Perspectiva - Schmid Aura">
+                            <img src="./assets/img/house/aura15-1140x641.webp" alt="Perspectiva - Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -394,8 +394,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="./assets/img/house/aura16.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura16-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura16.webp" class="image" title="Perspectiva - Schmid Aura">
+                            <img src="./assets/img/house/aura16-1140x641.webp" alt="Perspectiva - Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -403,8 +403,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="./assets/img/house/aura17.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura17-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura17.webp" class="image" title="Perspectiva - Schmid Aura">
+                            <img src="./assets/img/house/aura17-1140x641.webp" alt="Perspectiva - Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -412,8 +412,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="./assets/img/house/aura18.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura18-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura18.webp" class="image" title="Perspectiva - Schmid Aura">
+                            <img src="./assets/img/house/aura18-1140x641.webp" alt="Perspectiva - Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -421,8 +421,8 @@
                 <!--end slide-->
                 <div class="slide">
                     <div class="container">
-                        <a href="./assets/img/house/aura19.webp" class="image" title="Schmid Aura">
-                            <img src="./assets/img/house/aura19-1140x641.webp" alt="Schmid Aura">
+                        <a href="./assets/img/house/aura19.webp" class="image" title="Perspectiva - Schmid Aura">
+                            <img src="./assets/img/house/aura19-1140x641.webp" alt="Perspectiva - Schmid Aura">
                         </a>
                     </div>
                     <!--end container-->
@@ -480,23 +480,27 @@
         <div class="block">
             <div class="container">
                 <div class="logos">
-                    <div class="owl-carousel" data-owl-nav="1" data-owl-dots="0" data-owl-items="4" data-owl-items-mobile="2" data-owl-auto-width="0" data-owl-autoplay="1" data-owl-loop="1">
+                    <div class="owl-carousel" data-owl-nav="1" data-owl-dots="0" data-owl-items="4" data-owl-items-mobile="2" data-owl-auto-width="0" data-owl-autoplay="0" data-owl-loop="0">
                         <div class="logo">
+                            <span class="text">Mkt. e comunicação:</span>
                             <a href="https://www.luziac.com.br/" title="Luziac" target="_blank">
                                 <img src="./assets/img/luziac-logo.webp" alt="Luziac" width="170" height="64">
                             </a>
                         </div>
                         <div class="logo">
+                            <span class="text">Gerenciamento:</span>
                             <a href="#" title="Agilizza" target="_blank">
                                 <img src="./assets/img/agilizza-logo.webp" alt="Agilizza" width="170" height="64">
                             </a>
                         </div>
                         <div class="logo">
+                            <span class="text">Arquitetura:</span>
                             <a href="https://hausarquitetura.com.br/" title="Haus" target="_blank">
                                 <img src="./assets/img/haus-logo.webp" alt="Haus Arquitetura" width="170" height="64">
                             </a>
                         </div>
                         <div class="logo">
+                            <span class="text">Empreiteiro:</span>
                             <a href="https://dreamerengenharia.com.br/" title="Dreamer" target="_blank">
                                 <img src="./assets/img/dreamer-logo.webp" alt="Dreamer Engenharia" width="170" height="64">
                             </a>
@@ -603,7 +607,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-6">
-                        <div class="note">(C) 2025 Todos os direitos reservados</div>
+                        <div class="note">(C) 2025 Todos os direitos reservados para Schmid Incorporaçõe</div>
                     </div>
                     <div class="col-md-6 box-by">
                         <p class="by">Desenvolvido por:</p>
